Fix IE11 code block alignment issues

--- a/src/stylesheets/objects/code_block.styl
+++ b/src/stylesheets/objects/code_block.styl
@@ -21,12 +21,14 @@ Styleguide 13.0
   white-space: pre
   overflow-x: auto
   flex-grow: 1
+  flex-basis: 100%
 
   &__wrapper
     margin-top: 1.5rem
     overflow-x: hidden
-    display: flex
+    display: inline-flex
     flex-wrap: nowrap
+    width: 100%
 
   &__language
     position: absolute
